# rusthook

./: .gitignore  Cargo.toml  Dockerfile  README.md  ci.yaml  ff  hooks.example.yaml  vars.yaml
.github/workflows/: rust.yml
ci/: cd.yaml
ci/jobs/: cargo-build.yml  rustfmt.yml
ci/scenarios/: builds.yml  check.yml
ci/steps/: artifacts.yml
docs/: Configuration-Definition.md  Hook-Trigger-Rules.md  Referencing-Request-Values-As-Parameter.md  Rusthook-Parameters.md
jobs/: cargo-check.yml  cargo-test.yaml
rules/: rule.test.yaml  subrule.yaml
scenarios/: test.yml
src/: lib.rs  main.rs
src/arguments/: mod.rs
src/check/: mod.rs
src/command/: mod.rs  test.ps1  test.sh
src/config/: configs.rs  global.rs  hooks.test.rule.and.yaml  hooks.test.yaml  mod.rs
src/mylog/: mod.rs
src/parser/: mod.rs
src/response/: favicon.rs  mod.rs
src/rule/: and_rule.rs  mod.rs  not_rule.rs  or_rule.rs  single_rule.rs
src/tests/config/: hooks.test.rule.include.yaml  hooks.test.rule.not.yaml  hooks.test.rule.yaml
src/tests/rule/: rule.test.yaml  subrule.yaml
steps/: install-rust.yml
