[package]
name = "rusthook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "^1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.91"
clap = { version = "^4.0.32", features = ["derive"] }
log = "^0.4.17"
simplelog= "^0.12"
cmd_lib = "^1.3.0"
